@startuml
!include comun.iuml
hide circle
skinparam linetype ortho

entity "roles" as roles {
  * rol_id : INT <<PK>>
  --
  * nombre : VARCHAR(30)
  descripcion : VARCHAR(120)
}

entity "usuarios" as usuarios {
  * usuario_id : INT <<PK>>
  --
  * rol_id : INT <<FK>>
  * correo : VARCHAR(120) <<UQ>>
  * clave_hash : VARCHAR(200)
  * nombre : VARCHAR(120)
  activo : TINYINT(1)
  bloqueado : TINYINT(1)
}

entity "clientes" as clientes {
  * cliente_id : INT <<PK>>
  --
  * razon_social : VARCHAR(160)
  * nit : VARCHAR(20) <<UQ>>
  correo : VARCHAR(120)
  telefono : VARCHAR(20)
  autorizacion_datos : DATETIME
}

entity "proveedores" as proveedores {
  * proveedor_id : INT <<PK>>
  --
  * razon_social : VARCHAR(160)
  * nit : VARCHAR(20) <<UQ>>
  contacto : VARCHAR(120)
  plazo_dias : INT
  activo : TINYINT(1)
}

entity "categorias" as categorias {
  * categoria_id : INT <<PK>>
  --
  * nombre : VARCHAR(80) <<UQ>>
  descripcion : VARCHAR(200)
}

entity "productos" as productos {
  * producto_id : INT <<PK>>
  --
  * categoria_id : INT <<FK>>
  * proveedor_id : INT <<FK>>
  * codigo : VARCHAR(60) <<UQ>>
  * nombre : VARCHAR(160)
  * costo : DECIMAL(14,2)
  precio_contado : DECIMAL(14,2) <<GEN>>
  precio_credito : DECIMAL(14,2) <<GEN>>
  * existencia : INT
  existencia_minima : INT
  activo : TINYINT(1)
}

entity "historico_costos" as historico {
  * historico_id : BIGINT <<PK>>
  --
  * producto_id : INT <<FK>>
  * costo : DECIMAL(14,2)
  * vigente_desde : DATE
  vigente_hasta : DATE
}

entity "reglas_margen" as reglas {
  * regla_id : INT <<PK>>
  --
  categoria_id : INT <<FK>>
  proveedor_id : INT <<FK>>
  * forma_pago : ENUM
  * factor : DECIMAL(6,4)
  * vigente_desde : DATE
}

entity "mapeos_proveedor" as mapeos {
  * mapeo_id : INT <<PK>>
  --
  * proveedor_id : INT <<FK>>
  * campo_sistema : VARCHAR(60)
  * columna_origen : VARCHAR(60)
  obligatorio : TINYINT(1)
}

entity "cargas_precios" as cargas {
  * carga_id : BIGINT <<PK>>
  --
  * proveedor_id : INT <<FK>>
  * usuario_id : INT <<FK>>
  * origen : ENUM
  * estado : ENUM
  * fecha : DATETIME
  registros_leidos : INT
  registros_aplicados : INT
  registros_rechazados : INT
}

entity "detalle_carga_precios" as detcarga {
  * detalle_id : BIGINT <<PK>>
  --
  * carga_id : BIGINT <<FK>>
  producto_id : INT <<FK>>
  * referencia_origen : VARCHAR(80)
  costo : DECIMAL(14,2)
  aceptado : TINYINT(1)
  motivo_rechazo : VARCHAR(200)
}

entity "cotizaciones" as cotiz {
  * cotizacion_id : BIGINT <<PK>>
  --
  * cliente_id : INT <<FK>>
  * usuario_id : INT <<FK>>
  * fecha_emision : DATE
  * fecha_vencimiento : DATE
  * estado : ENUM
  subtotal : DECIMAL(14,2)
  iva : DECIMAL(14,2)
  total : DECIMAL(14,2) <<GEN>>
}

entity "cotizacion_items" as cotitems {
  * item_id : BIGINT <<PK>>
  --
  * cotizacion_id : BIGINT <<FK>>
  * producto_id : INT <<FK>>
  * cantidad : INT
  * precio_unitario : DECIMAL(14,2)
  subtotal : DECIMAL(14,2) <<GEN>>
}

entity "ventas" as ventas {
  * venta_id : BIGINT <<PK>>
  --
  * cliente_id : INT <<FK>>
  * usuario_id : INT <<FK>>
  cotizacion_id : BIGINT <<FK>>
  * fecha : DATETIME
  * forma_pago : ENUM
  subtotal : DECIMAL(14,2)
  iva : DECIMAL(14,2)
  total : DECIMAL(14,2) <<GEN>>
}

entity "venta_items" as venitems {
  * item_id : BIGINT <<PK>>
  --
  * venta_id : BIGINT <<FK>>
  * producto_id : INT <<FK>>
  * cantidad : INT
  * precio_unitario : DECIMAL(14,2)
  subtotal : DECIMAL(14,2) <<GEN>>
}

entity "facturas_electronicas" as facturas {
  * factura_id : BIGINT <<PK>>
  --
  * venta_id : BIGINT <<FK, UQ>>
  cufe : VARCHAR(96)
  * estado : ENUM
  fecha_envio : DATETIME
  fecha_validacion : DATETIME
  respuesta : TEXT
}


entity "parametros" as par {
  * parametro_id : INT <<PK>>
  --
  * clave : VARCHAR(80) <<UQ>>
  * valor : VARCHAR(200)
  * tipo_dato : ENUM
  * vigente_desde : DATE
}

entity "uvt_anual" as uvt {
  * anio : SMALLINT <<PK>>
  --
  * valor : DECIMAL(12,2)
  resolucion : VARCHAR(60)
}

entity "reglas_iva" as riva {
  * regla_iva_id : INT <<PK>>
  --
  categoria_id : INT <<FK>>
  * tratamiento : ENUM
  umbral_uvt : DECIMAL(8,2)
  * tarifa : DECIMAL(5,4)
  * vigente_desde : DATE
  fundamento : VARCHAR(160)
}

entity "reglas_envio" as renv {
  * regla_envio_id : INT <<PK>>
  --
  * umbral_valor : DECIMAL(14,2)
  * base_calculo : ENUM
  * costo_envio : DECIMAL(14,2)
  * vigente_desde : DATE
}

entity "movimientos_inventario" as movim {
  * movimiento_id : BIGINT <<PK>>
  --
  * producto_id : INT <<FK>>
  * usuario_id : INT <<FK>>
  * tipo : ENUM
  * cantidad : INT
  * existencia_anterior : INT
  * existencia_posterior : INT
  * fecha : DATETIME
  observacion : VARCHAR(200)
}

entity "auditoria_accesos" as audit {
  * acceso_id : BIGINT <<PK>>
  --
  usuario_id : INT <<FK>>
  * correo : VARCHAR(120)
  * exitoso : TINYINT(1)
  origen : VARCHAR(60)
  * fecha : DATETIME
}

entity "sesiones" as sesiones {
  * sesion_id : BIGINT <<PK>>
  --
  * usuario_id : INT <<FK>>
  * token : VARCHAR(200) <<UQ>>
  * inicio : DATETIME
  * expira : DATETIME
  dispositivo : VARCHAR(120)
}

roles ||--o{ usuarios
usuarios ||--o{ sesiones
usuarios ||--o{ audit
usuarios ||--o{ cargas
usuarios ||--o{ movim
usuarios ||--o{ cotiz
usuarios ||--o{ ventas

categorias ||--o{ productos
proveedores ||--o{ productos
proveedores ||--o{ cargas
proveedores ||--o{ mapeos
categorias ||--o{ reglas
proveedores ||--o{ reglas

productos ||--o{ historico
productos ||--o{ movim
productos ||--o{ cotitems
productos ||--o{ venitems
productos ||--o{ detcarga

cargas ||--|{ detcarga

clientes ||--o{ cotiz
clientes ||--o{ ventas
cotiz ||--|{ cotitems
cotiz |o--o| ventas
ventas ||--|{ venitems
ventas ||--o| facturas
categorias ||--o{ riva
uvt ||--o{ riva
@enduml
